crates/pardosa-schema/tests/compile_fail/evt_002_via_alias.stderr
error[E0277]: the trait bound `HashMap<u32, u32>: GenomeSafe` is not satisfied
 --> tests/compile_fail/evt_002_via_alias.rs:7:10
  |
7 |     map: SafeMap,
  |          ^^^^^^^ the trait `GenomeSafe` is not implemented for `HashMap<u32, u32>`
  |
  = help: the following other types implement trait `GenomeSafe`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others

error[E0277]: the trait bound `HashMap<u32, u32>: Encode` is not satisfied
 --> tests/compile_fail/evt_002_via_alias.rs:5:21
  |
5 | #[derive(Serialize, GenomeSafe)]
  |                     ^^^^^^^^^^ the trait `Encode` is not implemented for `HashMap<u32, u32>`
  |
  = help: the following other types implement trait `Encode`:
            &[u8]
            &str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
  = note: this error originates in the derive macro `GenomeSafe` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `HashMap<u32, u32>: Decode` is not satisfied
 --> tests/compile_fail/evt_002_via_alias.rs:7:10
  |
7 |     map: SafeMap,
  |          ^^^^^^^ the trait `Decode` is not implemented for `HashMap<u32, u32>`
  |
  = help: the following other types implement trait `Decode`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
